spade-tests/src/snapshots/spade_tests__linear_check__unused_field_causes_error.snap
---
source: spade-tests/src/linear_check.rs
---
struct port A {
    x: &mut bool,
    y: &bool
}
entity x(resource: A) -> bool {
    true
}


error: Unused resource
  ┌─ testinput:5:10
  │
5 │ entity x(resource: A) -> bool {
  │          ^^^^^^^^ resource.x is unused
  │
  = note: resource.x is a &mut value which must be set


